Ultimata libreria ingresso

--- a/docs/microsim/simulation/component/VideoDevice.html
+++ b/docs/microsim/simulation/component/VideoDevice.html
@@ -424,7 +424,7 @@ it should read VRAM from.</div>
 <h3>step</h3>
 <div class="horizontal-scroll">
 <div class="member-signature"><span class="modifiers">public</span>&nbsp;<span class="return-type">void</span>&nbsp;<span class="element-name">step</span>()</div>
-<div class="block">Currently unused by video device. TODO: implement cursor functionality reading from ports.</div>
+<div class="block">Currently unused by video device.</div>
 <dl class="notes">
 <dt>Specified by:</dt>
 <dd><code><a href="SimulationComponent.html#step()">step</a></code>&nbsp;in class&nbsp;<code><a href="SimulationComponent.html" title="class in microsim.simulation.component">SimulationComponent</a></code></dd>
